# d3k

./: .dockerignore  Cargo.toml  README.md  d3k.Dockerfile  docker-compose.dev.yml  docker-compose.yml  flyway.conf  justfile  render.yaml
.cargo/: config.toml
dylink/: Cargo.toml
migrations/: r__auth_user_functions.sql  r__util_functions.sql
migrations/versioned/: m1.1.1__utils.sql  m1.1.2__create_auth_tables.sql  m2.2.1__create_web_table.sql  m2.4.1__create_post_tables.sql
src/: main.rs  utils.rs
